...
                android:layout_margin="5dp"

                android:text="Enter details of the habit"
                android:textSize="15dip" />

            <AutoCompleteTextView
                android:id="@+id/habitInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorGreenSuperLight"
                android:hint="Habit Name"
                android:padding="5dp"
...
                <!--<TimePicker-->
                <!--android:id="@+id/timePicker1"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

                <EditText
                    android:id="@+id/dateLastPerformedInput"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorGreenSuperLight"
                    android:ems="8"
                    android:focusable="false"
                    android:hint="Date Executed"
                    android:inputType="date"
                    android:textAlignment="center"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/timeLastPerformedInput"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
...
                    android:inputType="time"
                    android:textAlignment="center"

                    android:textSize="15dp" />

                <Button
                    android:id="@+id/nowButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:ems="5"
                    android:fontFamily="monospace"

                    android:padding="@dimen/button_padding"
                    android:textSize="@dimen/button_text"
                    android:text="Just did it!"
                    android:textColor="#FFFFFFFF"
                     />

            </LinearLayout>

            <AutoCompleteTextView
                android:id="@+id/categoryInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorGreenSuperLight"
                android:hint="Category"
                android:inputType="text|textPersonName"
...
                    android:gravity="center_vertical"
                    android:text="Remind me every"
                    android:textSize="@dimen/general_text"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/repetitionFrequencyInput"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10px"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="10sp" />

                <Spinner
                    android:id="@+id/repetitionPeriodSpinner"
                    android:layout_width="120dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.3" />
            </LinearLayout>

            <LinearLayout
...
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    >

                    <Button
                        android:id="@+id/addPersonInteractedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.5"
                        android:layout_margin="10dip"
                        android:background="@drawable/custom_button"
...
                        android:textSize="@dimen/button_text"
                        android:visibility="visible"

                        />

                    <Button
                        android:id="@+id/clearPersonButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.5"
                        android:layout_margin="10dip"
                        android:background="@drawable/custom_button"
...
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                >

                <Button

                    android:id="@+id/recordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dip"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
...
