...
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in_success">Sign in successful</string>
    <string name="sign_up_success">Thanks for creating an account</string>
    <string name="missing_info">"Some information are missing!"</string>
    <string name="save_success">"Data saved!"</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="repetition_period_array">
        <item>Minute(s)</item>
...
    </string-array>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="data_list_tab_text">Data List</string>
    <string name="insert_data_tab_text">Insert Habit</string>
    <string name="about_app_tab_text">About The App</string>

    <string name="last_performed_habit_sort_ascending_mode_text">Last Performed (Ascending)</string>
    <string name="name_habit_sort_ascending_mode_text">Habit Name (Ascending)</string>
    <string name="last_performed_habit_sort_descending_mode_text">Last Performed (Descending)</string>
    <string name="name_habit_sort_descending_mode_text">Habit Name (Descending)</string>

    <string name="last_performed_person_sort_ascending_mode_text">Last Performed With (Ascending)</string>
    <string name="name_person_sort_ascending_mode_text">Person Name (Ascending)</string>
    <string name="last_performed_person_sort_descending_mode_text">Last Performed With (Descending)</string>
    <string name="name_person_sort_descending_mode_text">Person Name (Descending)</string>

    <string name="habit_data_mode_text">Habit List</string>
    <string name="person_data_mode_text">Person List</string>

    <string name="banner_ad_footer">ca-app-pub-6696048212000730/7608980807</string>

    <string name="about_app_description">
        <![CDATA[
<h2><strong>Welcome!</strong>
...
    <string name="listviewitem_last_performed_label">Last performed: %1$s</string>
    <string name="listviewitem_frequency_performed_label">Performed %1$d time%2$s</string>
    <string name="listviewitem_reminder_label">Remind every %1$d %2$s</string>
    <string name="listviewitem_last_interacted_with_label">Last interacted with: %1$s</string>
    <string name="addinteractedperson_title">Add person</string>
    <string name="addinteractedperson_message">Enter the name of the person you performed this activity with</string>
    <string name="button_add_label">Add</string>
    <string name="button_cancel_label">Cancel</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="time_format">h:mm a</string>

</resources>

