...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/habitron_habit_list_toolbar"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/dataModeSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/habitron_habit_list_toolbar"
            android:layout_weight="1" />

        <Button
...
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dataListSpinnerContainer"
        android:id="@+id/dataListView" />
</RelativeLayout>

